style: apply cmake-format
Format the style of all CMake files with cmake-format [1] and a config [2] that
was already used on Disman in the past. [3]

Because some of the styling, that cmake-format provides is not optimal, we
adjust the output some more and do not enforce it through CI.

[1] https://github.com/cheshirekow/cmake_format
[2] https://gitlab.com/-/snippets/2164208
[3] kwinft/disman@2790ce26

--- a/WraplandConfig.cmake.in
+++ b/WraplandConfig.cmake.in
@@ -8,7 +8,8 @@ include("${CMAKE_CURRENT_LIST_DIR}/WraplandTargets.cmake")
 
 function(wraplandtest testBinaryName)
 
-    add_test(NAME ${testBinaryName}-wrapland-test COMMAND
-            @CMAKE_INSTALL_FULL_LIBEXECDIR@/org-kde-kf5-wrapland-testserver ${CMAKE_CURRENT_BINARY_DIR}/${testBinaryName}
-    )
+  add_test(NAME ${testBinaryName}-wrapland-test
+           COMMAND @CMAKE_INSTALL_FULL_LIBEXECDIR@/org-kde-kf5-wrapland-testserver
+                   ${CMAKE_CURRENT_BINARY_DIR}/${testBinaryName}
+  )
 endfunction()
