--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -6,5 +6,8 @@ set(scannerSRCS generator.cpp)
 
 add_definitions(-DMAPPING_FILE="${CMAKE_CURRENT_SOURCE_DIR}/mapping.txt")
 add_executable(wraplandScanner ${scannerSRCS})
-target_link_libraries(wraplandScanner Qt5::Core Qt5::Concurrent)
+target_link_libraries(wraplandScanner
+  Qt5::Core
+  Qt5::Concurrent
+)
 ecm_mark_as_test(wraplandScanner)
