refactor(server): introduce device_manager class template
Revert some decisions made during the implementation of primary selection.
The reasons are:
- get rid of (some) very ugly friend declarations,
- reinstate (some) meaningful private constructors and class friendship declarations.

We do this by introducing a device_manager class template that the DataDeviceManager
and the PrimarySelectionDeviceManager inherit from.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -38,6 +38,7 @@ set(SERVER_LIB_SRCS
   pointer_pool.cpp
   presentation_time.cpp
   primary_selection.cpp
+  primary_selection_device_manager.cpp
   region.cpp
   relative_pointer_v1.cpp
   seat.cpp
