refactor(server): handle seat pointers in a new class
Split methods and data related to pointers and gestures handling in a seat to a new class.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -33,6 +33,7 @@ set(SERVER_LIB_SRCS
   pointer.cpp
   pointer_constraints_v1.cpp
   pointer_gestures_v1.cpp
+  pointer_pool.cpp
   presentation_time.cpp
   primary_selection.cpp
   region.cpp
