refactor(server): handle seat touches in a new class
Split methods and data related to touch handling in a seat to a new class.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -47,6 +47,7 @@ set(SERVER_LIB_SRCS
   text_input_v2.cpp
   text_input_v3.cpp
   touch.cpp
+  touch_pool.cpp
   viewporter.cpp
   wayland/buffer_manager.cpp
   wayland/client.cpp
