refactor(server): handle seat drags in a new class
Split methods and data related to drag handling in a seat to a new class.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SERVER_LIB_SRCS
   data_source.cpp
   display.cpp
   dpms.cpp
+  drag_pool.cpp
   egl_stream_controller.cpp
   fake_input.cpp
   filtered_display.cpp
