refactor(server): handle text input in a new class
Split methods and data related to handling text input in a seat to a new class.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -47,6 +47,7 @@ set(SERVER_LIB_SRCS
   slide.cpp
   subcompositor.cpp
   surface.cpp
+  text_input_pool.cpp
   text_input_v2.cpp
   text_input_v3.cpp
   touch.cpp
