feat(server): expose pointer pool
Instead of relaying all pointer pool relevant calls through the Seat class
export the pointer_pool class and provide a getter for it in Seat.

The consumer is required to ensure a pointer pool has actually been created,
i.e. the pointer capability has been set on the seat.

BREAKING CHANGE: pointer functions are moved from Seat to pointer_pool

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -387,6 +387,7 @@ set(SERVER_LIB_HEADERS
   pointer.h
   pointer_constraints_v1.h
   pointer_gestures_v1.h
+  pointer_pool.h
   presentation_time.h
   primary_selection.h
   region.h
