feat(server): expose keyboard pool
Instead of relaying all keyboard pool relevant calls through the Seat class
export the keyboard_pool class and provide a getter for it in Seat.

The consumer is required to ensure a keyboard pool has actually been created,
i.e. the keyboard capability has been set on the seat.

BREAKING CHANGE: keyboard functions are moved from Seat to keyboard_pool

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -372,6 +372,7 @@ set(SERVER_LIB_HEADERS
   input_method_v2.h
   kde_idle.h
   keyboard.h
+  keyboard_pool.h
   keystate.h
   keyboard_shortcuts_inhibit.h
   layer_shell_v1.h
