feat(server): expose touch pool
Instead of relaying all touch pool relevant calls through the Seat class
export the touch_pool class and provide a getter for it in Seat.

The consumer is required to ensure a touch pool has actually been created,
i.e. the touch capability has been set on the seat.

BREAKING CHANGE: touch functions are moved from Seat to touch_pool

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -402,6 +402,7 @@ set(SERVER_LIB_HEADERS
   text_input_v2.h
   text_input_v3.h
   touch.h
+  touch_pool.h
   viewporter.h
   wl_output.h
   xdg_activation_v1.h
