feat(server): expose text-input pool
Instead of relaying all text-input pool relevant calls through the Seat class
export the text_input_pool class and provide a getter for it in Seat.

BREAKING CHANGE: text-input functions are moved from Seat to text_input_pool

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -399,6 +399,7 @@ set(SERVER_LIB_HEADERS
   slide.h
   subcompositor.h
   surface.h
+  text_input_pool.h
   text_input_v2.h
   text_input_v3.h
   touch.h
