feat(server): expose drag pool
Instead of relaying all drag pool relevant calls through the Seat class
export the drag_pool class and provide a getter for it in Seat.

BREAKING CHANGE: drag functions are moved from Seat to drag_pool

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -363,6 +363,7 @@ set(SERVER_LIB_HEADERS
   data_device_manager.h
   data_offer.h
   data_source.h
+  drag_pool.h
   display.h
   dpms.h
   egl_stream_controller.h
