--- a/autotests/client/CMakeLists.txt
+++ b/autotests/client/CMakeLists.txt
@@ -531,30 +531,30 @@ endif()
 # ##################################################################################################
 # Test TextInput
 # ##################################################################################################
-set(testTextInput_SRCS text_input.cpp)
-add_executable(testTextInput ${testTextInput_SRCS})
-target_link_libraries(testTextInput
+set(test_text_input_v2_SRCS text_input_v2.cpp)
+add_executable(test-text-input-v2 ${test_text_input_v2_SRCS})
+target_link_libraries(test-text-input-v2
   Qt5::Test
   Qt5::Gui
   Wrapland::Client
   Wrapland::Server
 )
-add_test(NAME wrapland-testTextInput COMMAND testTextInput)
-ecm_mark_as_test(testTextInput)
+add_test(NAME wrapland-test-text-input-v2 COMMAND test-text-input-v2)
+ecm_mark_as_test(test-text-input-v2)
 
 # ##################################################################################################
 # Test text-input v3
 # ##################################################################################################
 set(test_text_input_v3_SRCS text_input_v3.cpp)
-add_executable(test_text_input_v3 ${test_text_input_v3_SRCS})
-target_link_libraries(test_text_input_v3
+add_executable(test-text-input-v3 ${test_text_input_v3_SRCS})
+target_link_libraries(test-text-input-v3
   Qt5::Test
   Qt5::Gui
   Wrapland::Client
   Wrapland::Server
 )
-add_test(NAME wrapland-test_text_input_v3 COMMAND test_text_input_v3)
-ecm_mark_as_test(test_text_input_v3)
+add_test(NAME wrapland-test-text-input-v3 COMMAND test-text-input-v3)
+ecm_mark_as_test(test-text-input-v3)
 
 # ##################################################################################################
 # Test text-input with input-method synchronization
