fix: replace emit with Q_EMIT
Avoid compilation errors, by using a newer version of Qt.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -354,7 +354,7 @@ target_link_libraries(WraplandServer
 )
 
 set_target_properties(WraplandServer PROPERTIES
-  VERSION ${WRAPLAND_VERSION_STRING}
+  VERSION ${WRAPLAND_VERSION}
   SOVERSION ${WRAPLAND_SOVERSION}
   EXPORT_NAME WraplandServer
 )
