refactor(client): store DRM formats in vector
Use the same drm_format struct as in the server library and store the supported
formats simply in a vector.

BREAKING CHANGE: dmabuf formats in vector

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -314,6 +314,7 @@ target_link_libraries(WraplandClient
   PRIVATE
     Wayland::Client
     Qt5::Concurrent
+    external::external
 )
 
 set_target_properties(WraplandClient PROPERTIES
