feat: support org_kde_plasma_activation_feedback interface
The protocol is used to show feedback on activation in a Plasma desktop. When
an app is about to be launched but no surface yet exists, the desktop will show
a loading indicator or similar UI elements instead.

The app id sent in this protocol corresponds to the application id in the
XDG activation protocol.

--- a/autotests/client/CMakeLists.txt
+++ b/autotests/client/CMakeLists.txt
@@ -441,6 +441,21 @@ add_test(NAME wrapland-test_input_method_v2 COMMAND test_input_method_v2)
 ecm_mark_as_test(test_input_method_v2)
 
 # ##################################################################################################
+# Test org_kde_plasma_activation_feedback
+# ##################################################################################################
+set(plasma_activation_feedback_test_SRCS plasma_activation_feedback.cpp)
+add_executable(plasma-activation-feedback-test ${plasma_activation_feedback_test_SRCS})
+target_link_libraries(plasma-activation-feedback-test
+  Qt5::Test
+  Qt5::Gui
+  Wrapland::Client
+  Wrapland::Server
+  Wayland::Client
+)
+add_test(NAME wrapland-test-plasma-activation-feedback COMMAND plasma-activation-feedback-test)
+ecm_mark_as_test(plasma-activation-feedback-test)
+
+# ##################################################################################################
 # Test PlasmaShell
 # ##################################################################################################
 set(testPlasmaShell_SRCS plasma_shell.cpp)
