--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -30,6 +30,7 @@ set(SERVER_LIB_SRCS
   output_configuration_v1.cpp
   output_device_v1.cpp
   output_management_v1.cpp
+  plasma_activation_feedback.cpp
   plasma_shell.cpp
   plasma_virtual_desktop.cpp
   plasma_window.cpp
@@ -399,6 +400,7 @@ set(SERVER_LIB_HEADERS
   output_configuration_v1.h
   output_device_v1.h
   output_management_v1.h
+  plasma_activation_feedback.h
   plasma_shell.h
   plasma_virtual_desktop.h
   plasma_window.h
