--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -358,7 +358,7 @@ set_target_properties(WraplandServer PROPERTIES
   SOVERSION ${WRAPLAND_SOVERSION}
   EXPORT_NAME WraplandServer
 )
-kde_target_enable_exceptions(WraplandServer PUBLIC)
+target_compile_options (WraplandServer PUBLIC -fexceptions)
 
 install(
   TARGETS WraplandServer
